--- a/index.html
+++ b/index.html
@@ -8,4 +8,8 @@
         <link rel="stylesheet" href="style.css" />
         <script src="script.js" defer></script>
     </head>
+       <body>
+      <p>{{say}}  {{to}}</p>
+    </body>
+</html>
 <h1>Jake :)</h1>    
