--- a/index.html
+++ b/index.html
@@ -9,5 +9,22 @@
         <script src="script.js" defer></script>
     </head>
 
+    <p id="demo"></p>
+
+<script>
+const time = new Date().getHours();
+let greeting;
+if (time < 10) {
+  greeting = "Good morning";
+} else if (time < 20) {
+  greeting = "Good evening";
+} else {
+  greeting = "Good evening";
+}
+document.getElementById("demo").innerHTML = greeting;
+</script>
+
+</body>
 </html>
+
 <h1>Jake :)</h1>    
