--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <p id="demo"></p>
 <!-- The video -->
-<video autoplay muted loop id="https://drive.google.com/file/d/1kY-Lbq6tPIMO8y41cH4U7jL3X3RaCrGJ/view?usp=drive_link">
+<video autoplay muted loop id="wallpaper">
 </video>
     
 <script>
