--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     </head>
 
     <p id="demo"></p>
-<!-- The video -->
-<video autoplay muted loop id="wallpaper">
+
+    <video id="background-video" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
+  <source src="wallpaper.mp4" type="video/mp4">
 </video>
     
 <script>
