--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
         <script src="script.js" defer></script>
     </head>
 
-    <video id="background-video" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
-    <video id="background-video" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
+    <video id="background-video" autoplay loop muted poster="wallpaper.mp4>
   <source src="wallpaper.mp4" type="video/mp4">
 </video>
 
