--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
         <script src="script.js" defer></script>
     </head>
 
+    <video autoplay muted loop id="Wallpaper>
+  <source src="wallpaper.mp4" type="video/mp4">
+</video>
+
     <p id="demo"></p>
 
 <script>
