--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
         <script src="script.js" defer></script>
     </head>
 
-    <video autoplay muted loop id="Wallpaper>
-  <source src="wallpaper.mp4" type="video/mp4">
-</video>
+<video src="wallpaper.mp4" autoplay loop playsinline muted></video>
 
     <p id="demo"></p>
 
