--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
         <script src="script.js" defer></script>
     </head>
 
-<video playsinline autoplay muted loop poster="https://cdn.britannica.com/21/30121-050-67D2C4BB/detail-Edmund-Burke-Joshua-Reynolds-studio-oil-1771.jpg?w=400&h=300&c=crop">
-    <source src="wallpaper.mp4" type="video/webm">
+<div class="video-wrapper">
+  <video playsinline autoplay muted loop poster="https://cdn.britannica.com/21/30121-050-67D2C4BB/detail-Edmund-Burke-Joshua-Reynolds-studio-oil-1771.jpg?w=400&h=300&c=crop">
+    <source src="wallpaper.mp4" type="video/mp4">
     Your browser does not support the video tag.
-</video>    
+  </video>
 
+  <div class="header">
+    <h1>Blueberry Cheesecake</h1>
+    <button>Recipe here</button>
+  </div>
+</div>
+    
 <p id="demo"></p>
 
 <script>
