--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@ document.getElementById("demo").innerHTML = greeting;
 </body>
 </html>
 
-<h2>Jake :)</h2>    
+<div class="container">
+  <img src="wallpaper.mp4" alt="wallpaper" style="width:100%;">
+  <div class="centered">Jake :)</div>
+</div>
 
 <script>
 function startTime() {
