--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ document.getElementById("demo").innerHTML = greeting;
 </html>
 
 <div class="container">
-  <img src="wallpaper.mp4" alt="wallpaper" style="width:100%;">
+  <img src="background.jpg" alt="background" style="width:100%;">
   <div class="centered">Jake :)</div>
 </div>
 
