--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
         <link rel="stylesheet" href="style.css" />
         <script src="script.js" defer></script>
     </head>
-<div class="container">
-  <img src="background.jpg" alt="background" style="width:100%;">
-  <div class="centered">Jake :)</div>
 
     <p id="demo"></p>
 
@@ -28,6 +25,7 @@ document.getElementById("demo").innerHTML = greeting;
 </script>
 
 </body>
+<h2>Jake :)</h2>
 </html>
 
 <script>
