--- a/index.html
+++ b/index.html
@@ -50,9 +50,12 @@
             let h = today.getHours();
             let m = today.getMinutes();
             let s = today.getSeconds();
+            let ampm = h >= 12 ? 'PM' : 'AM';
+            h = h % 12;
+            h = h ? h : 12; // the hour '0' should be '12'
             m = checkTime(m);
             s = checkTime(s);
-            document.getElementById('txt').innerHTML = h + ":" + m + ":" + s;
+            document.getElementById('txt').innerHTML = h + ":" + m + ":" + s + " " + ampm;
             setTimeout(startTime, 1000);
         }
 
