--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             greeting = "Good morning";
         } else if (time < 18) {
             greeting = "Good afternoon";
+        } else if (time < 21) {
+            greeting = "Sleep well!";
         } else {
             greeting = "Good evening";
         }
