--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             greeting = "Good morning";       
         } else if (time < 18) {
             greeting = "Good afternoon";
-        } else if (time < 13) {            
+        } else if (time > 13) {            
             greeting = "Goodnight";
         } else {
             greeting = "Good evening";
