--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         }
         #txt {
             position: absolute;
-            top: 40%; /* Adjust this value to position the clock higher or lower */
+            bottom: 20%; /* Adjust this value to position the clock higher or lower */
             left: 50%;
             transform: translateX(-50%);
         }
