--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             position: absolute;
             border-radius: 50%;
             background: rgba(255, 255, 255, 0.2);
-            filter: blur10(px);
+            filter: blur(10px);
             animation: float 10s infinite;
         }
         @keyframes float {
