--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            color: white; /* Set all text to white */
-            background-color: black; /* Optional: Set background to black for better contrast */
-            font-size: 2em; /* Enlarge text */
-            overflow: hidden; /* Prevent scrollbars */
+            color: white;
+            background-color: black;
+            font-size: 2em;
+            overflow: hidden;
         }
         .container {
             text-align: center;
             position: relative;
             height: 100%;
             width: 100%;
-            z-index: 1; /* Ensure content is above particles */
+            z-index: 1;
         }
         #txt {
             position: absolute;
-            bottom: 20%; /* Adjust this value to position the clock higher or lower */
+            bottom: 20%;
             left: 50%;
             transform: translateX(-50%);
         }
         #countdown {
             position: absolute;
-            bottom: 10%; /* Adjust this value to position the countdown higher or lower */
+            bottom: 10%;
             left: 50%;
             transform: translateX(-50%);
         }
@@ -43,9 +43,9 @@
             position: absolute;
             width: 100%;
             height: 100%;
-            background: url('background.jpg') no-repeat center center fixed; /* Keep original background image */
+            background: url('background.jpg') no-repeat center center fixed;
             background-size: cover;
-            z-index: 0; /* Ensure particles are behind other elements */
+            z-index: 0;
         }
         .particle {
             position: absolute;
@@ -68,12 +68,12 @@
     </style>
 </head>
 <body>
-    <div id="particles-js"></div> <!-- Added particle effect container -->
+    <div id="particles-js"></div>
     <div class="container">
         <p id="greeting"></p>
         <h2>Jake :)</h2>
         <p id="txt"></p>
-        <p id="countdown"></p> <!-- Added countdown element -->
+        <p id="countdown"></p>
     </div>
 
     <script>
@@ -96,14 +96,32 @@
 
         createParticles();
 
+        // Update particle positions based on mouse movement
+        document.addEventListener('mousemove', (e) => {
+            const particles = document.querySelectorAll('.particle');
+            const mouseX = e.clientX;
+            const mouseY = e.clientY;
+
+            particles.forEach(particle => {
+                const particleX = parseFloat(particle.style.left);
+                const particleY = parseFloat(particle.style.top);
+
+                // Calculate movement relative to the mouse cursor
+                const offsetX = (mouseX - window.innerWidth / 2) * 0.02;
+                const offsetY = (mouseY - window.innerHeight / 2) * 0.02;
+
+                particle.style.transform = `translate(${offsetX}px, ${offsetY}px)`;
+            });
+        });
+
         // Greeting Script
         const time = new Date().getHours();
         let greeting;
         if (time < 10) {
-            greeting = "Good morning";       
+            greeting = "Good morning";
         } else if (time < 18) {
             greeting = "Good afternoon";
-        } else if (time > 13) {            
+        } else if (time > 13) {
             greeting = "Goodnight";
         } else {
             greeting = "Good evening";
@@ -126,7 +144,7 @@
         }
 
         function checkTime(i) {
-            if (i < 10) {i = "0" + i};  // add zero in front of numbers < 10
+            if (i < 10) {i = "0" + i};
             return i;
         }
 
