--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Countdown Timer</title>
     <link rel="icon" type="image/x-icon" href="https://images.sftcdn.net/images/t_app-icon-m/p/459ac38a-96d0-11e6-b687-00163ed833e7/1317321988/internet-explorer-7-logo.png">
-    <link rel="stylesheet" href="style.css" />
-    <script src="script.js" defer></script>
     <style>
         body {
             display: flex;
@@ -52,18 +50,6 @@
             border-radius: 50%;
             background: rgba(255, 255, 255, 0.3);
             filter: blur(8px);
-            animation: float 10s infinite;
-        }
-        @keyframes float {
-            0% {
-                transform: translateY(0);
-            }
-            50% {
-                transform: translateY(-20px);
-            }
-            100% {
-                transform: translateY(0);
-            }
         }
     </style>
 </head>
@@ -78,18 +64,26 @@
 
     <script>
         // Particle Effect Script
+        const particles = [];
+        const particleCount = 50;
+
         function createParticles() {
             const particlesContainer = document.getElementById('particles-js');
-            const numberOfParticles = 50;
 
-            for (let i = 0; i < numberOfParticles; i++) {
+            for (let i = 0; i < particleCount; i++) {
                 const particle = document.createElement('div');
                 particle.classList.add('particle');
                 particle.style.width = `${Math.random() * 40 + 20}px`;
                 particle.style.height = particle.style.width;
                 particle.style.top = `${Math.random() * 100}%`;
                 particle.style.left = `${Math.random() * 100}%`;
-                particle.style.animationDuration = `${Math.random() * 5 + 5}s`;
+
+                particles.push({
+                    element: particle,
+                    velocityX: 0,
+                    velocityY: 0
+                });
+
                 particlesContainer.appendChild(particle);
             }
         }
@@ -100,7 +94,6 @@
         let lastMouseX = 0, lastMouseY = 0, lastTime = 0;
 
         document.addEventListener('mousemove', (e) => {
-            const particles = document.querySelectorAll('.particle');
             const mouseX = e.clientX;
             const mouseY = e.clientY;
             const currentTime = Date.now();
@@ -108,21 +101,15 @@
             // Calculate mouse velocity
             const deltaX = mouseX - lastMouseX;
             const deltaY = mouseY - lastMouseY;
-            const timeDiff = currentTime - lastTime || 1; // Avoid division by zero
+            const timeDiff = currentTime - lastTime || 1;
+
             const velocityX = deltaX / timeDiff;
             const velocityY = deltaY / timeDiff;
 
+            // Apply velocity to particles
             particles.forEach(particle => {
-                const currentLeft = parseFloat(particle.style.left);
-                const currentTop = parseFloat(particle.style.top);
-
-                // Apply velocity to the particles based on mouse velocity
-                const offsetX = velocityX * 20; // Adjust multiplier to control effect strength
-                const offsetY = velocityY * 20;
-
-                // Ensure particles stay within the container bounds
-                particle.style.left = `${Math.min(100, Math.max(0, currentLeft + offsetX))}%`;
-                particle.style.top = `${Math.min(100, Math.max(0, currentTop + offsetY))}%`;
+                particle.velocityX += velocityX * 0.5;  // Adjust strength
+                particle.velocityY += velocityY * 0.5;
             });
 
             // Update last mouse position and time
@@ -130,6 +117,29 @@
             lastMouseY = mouseY;
             lastTime = currentTime;
         });
+
+        // Update particle positions based on their velocity
+        function updateParticles() {
+            particles.forEach(particle => {
+                const currentLeft = parseFloat(particle.element.style.left);
+                const currentTop = parseFloat(particle.element.style.top);
+
+                const newLeft = currentLeft + particle.velocityX;
+                const newTop = currentTop + particle.velocityY;
+
+                // Wrap particles around screen boundaries
+                particle.element.style.left = `${(newLeft + 100) % 100}%`;
+                particle.element.style.top = `${(newTop + 100) % 100}%`;
+
+                // Apply friction to gradually reduce velocity over time
+                particle.velocityX *= 0.98;  // Friction coefficient
+                particle.velocityY *= 0.98;
+            });
+
+            requestAnimationFrame(updateParticles);
+        }
+
+        updateParticles();
 
         // Greeting Script
         const time = new Date().getHours();
